# cgwavefront_obj

./: .gitignore  CHANGELOG.md  Cargo.toml  GRAMMAR.md  README.md  TODO.md  rustfmt.toml
assets/: metadata.txt
benches/: benchmark_al.rs  benchmark_cube.rs  benchmark_minicooper.rs  benchmark_symphysis.rs  benchmark_teapot.rs
docs/: mtl_spec.md
examples/: teapot.rs  teapot_file.rs
src/: lexer.rs  lib.rs  mtl.rs  obj.rs  obj_parser.rs  object.rs  parser.rs  test_lexer.rs
src/lexer/: lexer.rs  mod.rs  test_lexer.rs
src/tests/: mod.rs  normal_vertex.rs  texture_vertex.rs  vertex.rs  vtn_index.rs
tests/: spec_obj_parser.rs  test_mtl_parser.rs  test_obj_parser.rs  test_obj_parser2.rs  test_obj_parser3.rs  test_obj_parser_teapot.rs
