[package]
name = "wavefront_obj"
version = "0.5.3"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/lambdaxymox/wavefront-obj"
keywords = ["wavefront", "obj", "geometry processing", "shading", "graphics", "mtl"]

[lib]
name = "wavefront_obj"

[dependencies]
quickcheck = "0.7.2"
rand = "0.7.0"

[profile.bench]
opt-level = 2
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
