[package]
name = "cgwavefront_obj"
version = "0.9.0"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/lambdaxymox/cgwavefront_obj"
categories = [
    "graphics",
    "game-development",
    "parser-implementations"
]
keywords = [
    "wavefront", 
    "obj", 
    "graphics", 
    "mtl"
]
license = "Apache-2.0 OR MIT"
description = "A library for working with Wavefront OBJ and MTL files."

[lib]
name = "wavefront_obj"

[dev-dependencies]
criterion = "0.3.3"

[profile.bench]
opt-level = 2
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[[bench]]
name = "benchmark_cube"
harness = false

[[bench]]
name = "benchmark_teapot"
harness = false

[[bench]]
name = "benchmark_al"
harness = false

